[gd_scene load_steps=12 format=3 uid="uid://ca4febxsgjyyh"]

[ext_resource type="Script" path="res://game/scenes/Level.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c0d1h3xba2j4e" path="res://assets/cityscape.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dsaiijkscvrfw" path="res://assets/buildings.png" id="3"]
[ext_resource type="PackedScene" uid="uid://ck7uiqcyaf6j2" path="res://game/peron/Peron.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://buyc70hdc4bal" path="res://game/vfx/smoke_emitter/SmokeEmitter.tscn" id="4_hb282"]
[ext_resource type="Texture2D" uid="uid://cbwwes1f88d7d" path="res://assets/crosshair.png" id="5"]
[ext_resource type="Script" path="res://game/Cursor.gd" id="6"]
[ext_resource type="Script" path="res://game/AIDirector.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://c57bmno58duvi" path="res://game/Foreground.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://bugffpvydnq64" path="res://game/HUD.tscn" id="8_w6202"]
[ext_resource type="PackedScene" uid="uid://d0u268u2tja7g" path="res://game/scenes/SceneFader.tscn" id="10_ir7ax"]

[node name="Level" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
position_smoothing_enabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera2D"]

[node name="BackLayer" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(480, 0)

[node name="cityscape" type="Sprite2D" parent="Camera2D/ParallaxBackground/BackLayer"]
texture = ExtResource("2")
centered = false
region_rect = Rect2(0, 0, 1280, 240)

[node name="MiddleLayer" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(480, 0)

[node name="buildings" type="Sprite2D" parent="Camera2D/ParallaxBackground/MiddleLayer"]
texture = ExtResource("3")
centered = false
region_rect = Rect2(0, 0, 1280, 240)

[node name="smoke1" parent="Camera2D/ParallaxBackground/MiddleLayer" instance=ExtResource("4_hb282")]
modulate = Color(0.588235, 0.45098, 0.517647, 1)
position = Vector2(134, 73)
local_coords = true

[node name="smoke2" parent="Camera2D/ParallaxBackground/MiddleLayer" instance=ExtResource("4_hb282")]
modulate = Color(0.588235, 0.45098, 0.517647, 1)
position = Vector2(395, 131)
local_coords = true

[node name="MainLayer" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]

[node name="Peron" parent="Camera2D/ParallaxBackground/MainLayer" instance=ExtResource("4")]
position = Vector2(-160, 240)

[node name="FrontLayer" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2(1.5, 1)

[node name="Foreground" parent="Camera2D/ParallaxBackground/FrontLayer" instance=ExtResource("8")]

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="Cursor" type="Sprite2D" parent="GUILayer"]
texture = ExtResource("5")
script = ExtResource("6")

[node name="HUD" parent="GUILayer" node_paths=PackedStringArray("player") instance=ExtResource("8_w6202")]
player = NodePath("../../Camera2D/ParallaxBackground/MainLayer/Peron")

[node name="SceneFader" parent="GUILayer" instance=ExtResource("10_ir7ax")]
visible = false

[node name="AIDirector" type="Node2D" parent="."]
script = ExtResource("7")

[connection signal="enemy_needed" from="AIDirector" to="." method="_on_AIDirector_enemy_needed"]
